--- a/Makefile.in
+++ b/Makefile.in
@@ -889,8 +889,8 @@ cp2bin:		$(top_builddir)/src/ugrep
 		@echo
 
 install-data-hook:
-		(mkdir -p $(datadir)/ugrep; \
-		 cp -rf patterns $(datadir)/ugrep/)
+		(mkdir -p $(DESTDIR)$(datadir)/ugrep; \
+ 		 cp -rf patterns $(DESTDIR)$(datadir)/ugrep/)
 		@echo " ______________________________________________________ "; \
 		 echo "|                                                      |"; \
 		 echo "| You have successfully built and installed ugrep.     |"; \
